Updates from Overleaf

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -159,7 +159,7 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/r2_cross_plot.pdf}
-    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 5,381 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (i.e. the orange points in Figure \ref{fig:W_vs_r2}). Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 5,381 parameters combinations. The red dashed line is the 1:1 line, the blue dashed line is the 2:1 line, and the cyan dashed lines are the 5:1 and 10:1 lines. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
+    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 573 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (i.e. the orange points in Figure \ref{fig:W_vs_r2}). Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 573 parameters combinations. Watersheds within the compilation of \citet{Gaillardet1999a} that are in the SEAI (Fly, Kikori, Purari, and Sepik watersheds, all in New Guinea) are indicated in green. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
     \label{fig:r2_cross_plot}
 \end{figure}
 
@@ -174,7 +174,7 @@ Experimental determinations of the activation energy ($E_a$; Equations 6 and 9) 
 
 Within the equation that governs the physical erosion rate in GEOCLIM (Equation 8), the values of the exponents ($m=0.5$ and $n=1$) are supported by compilations \citep{Lague2013a}. However, there is uncertainty in the value of the proportionality constant ($k_e$). We therefore tune this value such that the total erosion flux in the model under present-day slope and runoff conditions (see below) matches the total erosion flux estimated in \citet{Milliman2013a} ($20\times10^{12}$~kg/yr). Assuming that the density of eroded materials is 2500~kg/m$^{3}$, our tuned $k_e$ value is 0.0029110~m$^{1-m}$/yr$^{1-m}$.
 
-Within the equations that govern the chemical weathering rate in GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation 9), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation 9), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation 4), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation 6). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. We therefore allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 78,000 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
+Within the equations that govern the chemical weathering rate in GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation 9), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation 9), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation 4), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation 6). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. We therefore allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 93,600 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
 
 \begin{table}[h!]
 \begin{center}
@@ -213,9 +213,9 @@ We compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) u
 \noindent
 $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the observed \COtwo consumption over watershed $i$, and $\overline{\log_{10}(O)}$ is the mean of the log of observed \COtwo consumption over all watersheds.
 
-The majority of the original 93,600 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\leq0.4$, which leaves 5,381 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
+The majority of the original 93,600 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\leq0.5$, which leaves 573 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
 
-Global CO$_{2}$ consumption calculated from these 5,381 parameter combinations ranges from 2.9$\times10^{12}$~mol/yr to 7.7$\times10^{12}$~mol/yr, with a mean of 5.7$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
+Global CO$_{2}$ consumption calculated from these 573 parameter combinations ranges from 3.7$\times10^{12}$~mol/yr to 6.3$\times10^{12}$~mol/yr, with a mean of 5.2$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
 
 Each parameter combination predicts a different total \COtwo consumption that should match the \COtwo degassing at steady-state. Hence, in the non-calibration GEOCLIM experiments, each parameter combination is used with its corresponding steady-state \COtwo degassing. In these estimates we are not including the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
@@ -244,7 +244,7 @@ Given that precipitation in SEAI is primarily driven by large-scale convective u
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/scenario_pCO2_all.pdf}
-    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the 13 scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched estimates of present-day \COtwo consumption in 80 watersheds around the world (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, except for the addition of the scenarios used to test the sensitivity of the results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet.}
+    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the 13 scenarios, each point represents an estimate from one of the 573 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched estimates of present-day \COtwo consumption in 80 watersheds around the world. The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, except for the addition of the scenarios used to test the sensitivity of the results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet.}
     \label{fig:scenario_pCO2_all}
 \end{figure}
 
