checkpoint in PNAS submission draft

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -64,7 +64,7 @@
 \significancestatement{The Southeast Asian islands are a hotspot of \COtwo consumption via silicate weathering in the present day. Since $\sim$15 million years ago, these islands have been increasing in size at the same time that Earth's climate has been cooling. Here we test the hypothesis that global cooling over the past 15 million years has been driven by tectonic emergence of the Southeast Asian islands. To do so, we improve a silicate weathering model, then couple it to a climate model. We find that the majority of cooling over the past 15 million years can be explained by emergence of the Southeast Asian islands.}
 
 % Please include corresponding author, author contribution and author declaration information
-\authorcontributions{Please provide details of author contributions here.}
+\authorcontributions{Author contributions: Y.P., P.M., Y.G., and N.L.S-H. designed and implemented the GEOCLIM model. F.A.M. and E.A.A. constructed the paleoshoreline database. Y.P. and P.M. executed the model and analyzed the data. Y.P., P.M., Y.G., F.A.M., and N.L.S-H. wrote the manuscript.}
 \authordeclaration{The authors declare no competing interest.}
 \correspondingauthor{\textsuperscript{1}To whom correspondence should be addressed. E-mail: yuempark@berkeley.edu}
 
@@ -112,7 +112,7 @@ We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM (\SI). 
 
 \subsection*{Calibration}
 
-The values of four parameters within the silicate weathering component that modify the dependence of silicate weathering on temperature, runoff, and regolith thickness are poorly constrained. Rather than prescribing values, we allow these parameters and the Ca+Mg concentration of metamorphic and siliciclastic pixels to vary within reasonable bounds (\SI). This results in 93,600 unique combinations of these six parameters. For each combination, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 573 parameter combinations remain (\SI). The resulting global \COtwo consumption of these model runs all overlap with independently-derived estimates of the global \COtwo degassing flux \cite{Gerlach2011a} as they should given that the long-term carbon cycle is in steady state (\SI).
+The values of four parameters within the silicate weathering component that modify the dependence of silicate weathering on temperature, runoff, and regolith thickness are poorly constrained. Rather than prescribing values, we allow these parameters and the Ca+Mg concentration of metamorphic and siliciclastic pixels to vary within reasonable bounds (\SI; Table S2). This results in 93,600 unique combinations of these six parameters. For each combination, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 573 parameter combinations remain (\SI; Fig. S2). The resulting global \COtwo consumption of these model runs all overlap with independently-derived estimates of the global \COtwo degassing flux \cite{Gerlach2011a} as they should given that the long-term carbon cycle is in steady state (\SI; Fig. S2).
 
 \subsection*{Climate Model Component}
 
@@ -127,9 +127,9 @@ Having calibrated the silicate weathering component of GEOCLIM, we use it to est
     \label{fig:shoreline_growth}
 \end{SCfigure*}
 
-To determine the position of SEAI paleoshorelines over the past 15~m.y., we use terrestrial and marine sedimentary deposits (Fig. \ref{fig:shoreline_growth}; \SI). The paleoshoreline data indicate that the Sunda-Banda Arc and New Guinea are primarily responsible for the increase in area since 15~Ma. Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate \cite{Harris2006a}. Of the major islands in this arc, only Sumatra, Belitung, Bangka, Java, Bali, and Flores were subaerially exposed before 5~Ma. However, most of Sumatra and Java along with the non-volcanic islands of the Outer Banda Arc were elevated above sea level after 5~Ma \cite{Hall2013b}. In New Guinea, emergence in the mid-Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{Cloos2005a}, which drove exhumation of the Irian-Marum-April Ophiolite Belt. Exhumation accelerated over the past 4~m.y. in the New Guinea Central Range due to slab-breakoff and buoyant uplift, and in eastern New Guinea due to jamming of the north-dipping subduction zone \cite{Cloos2005a}. These tectonic drivers and others throughout the region lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C). We also include changes in areas of presently-submerged continental shelves such as the Sunda Shelf that were previously exposed (\SI).
+To determine the position of SEAI paleoshorelines over the past 15~m.y., we use terrestrial and marine sedimentary deposits (Fig. \ref{fig:shoreline_growth}; \SI). The paleoshoreline data indicate that the Sunda-Banda Arc and New Guinea are primarily responsible for the increase in area since 15~Ma. Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate \cite{Harris2006a}. Of the major islands in this arc, only Sumatra, Belitung, Bangka, Java, Bali, and Flores were subaerially exposed before 5~Ma. However, most of Sumatra and Java along with the non-volcanic islands of the Outer Banda Arc were elevated above sea level after 5~Ma \cite{Hall2013b}. In New Guinea, emergence in the mid-Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{Cloos2005a}, which drove exhumation of the Irian-Marum-April Ophiolite Belt. Exhumation accelerated over the past 4~m.y. in the New Guinea Central Range due to slab-breakoff and buoyant uplift, and in eastern New Guinea due to jamming of the north-dipping subduction zone \cite{Cloos2005a}. These tectonic drivers and others throughout the region lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C). We also include changes in areas of presently-submerged continental shelves such as the Sunda Shelf that were previously exposed (\SI; Fig. S5).
 
-We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial extent of the SEAI at ca. 15, 10, and 5~Ma (``paleo-SEAI'' scenarios; Fig. \ref{fig:scenario_pCO2}). Because we use a climate model forced with modern geography, the position of the tectonic blocks remain fixed. Although there has been motion of these tectonic blocks since 15~Ma, they have remained within tropical latitudes such that this fixed scenario is a good approximation of the paleogeography (\SI). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed SEAI'' scenario).
+We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial extent of the SEAI at ca. 15, 10, and 5~Ma (``paleo-SEAI'' scenarios; Fig. \ref{fig:scenario_pCO2}). Because we use a climate model forced with modern geography, the position of the tectonic blocks remain fixed. Although there has been motion of these tectonic blocks since 15~Ma, they have remained within tropical latitudes such that this fixed scenario is a good approximation of the paleogeography (\SI; Fig. S8). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed SEAI'' scenario).
 
 \section*{\pCOtwo Estimates}
 
@@ -142,7 +142,7 @@ We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial e
 
 Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-Industrial \pCOtwo would have been $\sim$526--678~ppm.
 
-Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (\SI), indicating that the increase in subaerially-exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
+Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (\SI; Fig. S9), indicating that the increase in subaerially-exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
 The results of our SEAI scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of low-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}, its contribution is less than that of the SEAI, which have high-relief and a wet tropical climate in conjunction with high Ca+Mg lithologies.
 
@@ -161,7 +161,7 @@ Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated w
 
 A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a driver for Neogene cooling. However, proxy-based estimates of the evolution of volcanic degassing fluxes throughout the Neogene are inconsistent with each other, such that not even the sign of the change in volcanic degassing over the past $\sim$15~m.y. is without ambiguity \cite{Godderis2017c}. For example, it has both been estimated that the volcanic degassing flux was $\sim$25\% lower \cite{Cogne2006a} and $\sim$10\% higher \cite{Van-Der-Meer2014a} at 15~Ma relative to the present day.
 
-Nevertheless, our model framework provides us with the opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI), GEOCLIM estimates a volcanic degassing flux for the pre-Industrial of 4.1$\times$10$^{12}$~mol/yr. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI lead to a change in \pCOtwo of $\sim$280~ppm (``change in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-Industrial to drive the same $\sim$280~ppm change in \pCOtwo (``change in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}).
+Nevertheless, our model framework provides us with the opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), GEOCLIM estimates a volcanic degassing flux for the pre-Industrial of 4.1$\times$10$^{12}$~mol/yr. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI lead to a change in \pCOtwo of $\sim$280~ppm (``change in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-Industrial to drive the same $\sim$280~ppm change in \pCOtwo (``change in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}).
 
 This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}, suggesting that reasonable changes in the volcanic degassing flux alone are insufficient to drive the majority of cooling observed over the Neogene. However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, let us assume that we have overestimated the increase in global weatherability associated with SEAI emergence over the past 15~m.y., and instead explore a scenario in which this increase is more accurately reflected by the difference in global weatherability between our 5~Ma and pre-Industrial tectonic boundary conditions (``change in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}). In this scenario, if the volcanic degassing flux decreased from a value $\sim$7\% greater than the pre-Industrial, we can achieve the same $\sim$280~ppm change in \pCOtwo.
 
@@ -273,7 +273,7 @@ $x(z)$ is the abundance profile of primary phases inside the regolith, varying w
 
 \subsection*{Weatherability Curves}
 
-To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' paleoshorelines and the present day shorelines to generate the 3 other weatherability curves. 
+To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' paleoshorelines and the present day shorelines to generate the 3 other weatherability curves. 
 
 \subsection*{SI Appendix}
 
